tests/NormalTests/paczka1/fuzzy1/87073621.err
Error in line 4: ftV5Z A367 4,0
Error in line 6: 8uVSE5gh A815 91,4
Error in line 3: vdndvCO S209 78,9
Error in line 18: vdndvCO S496 91,0
Error in line 21: ftV5Z A815 218,7
Error in line 27: ftV5Z A367 34,8
Error in line 39: mbAs1O S209 71r0
